import gql from "graphql-tag";

export const userTypeDefs = gql`
  type Avatar {
    url: String
    public_id: String
  }

  input UserInput {
    name: String!
    password: String!
    email: String!
  }

  input UpdateUserInput {
    name: String!
    email: String!
  }

  type User {
    id: ID!
    name: String!
    email: String!
    avatar: Avatar
    role: [String]
    membershipTier: String
    referralCode: String
    referralPoints: Int
    isActive: Boolean!
    createdAt: String!
    updatedAt: String!
  }

  type ReferralCodeStatus {
    isValid: Boolean!
    ownerName: String
  }

  type Query {
    currentUser: User
    logout: Boolean
    getAllUsers: [User!]!
    getUserById(userId: ID!): User
    validateReferralCode(code: String!): ReferralCodeStatus!
  }

  type Mutation {
    register(userInput: UserInput!): User
    login(email: String!, password: String!): User
    uploadAvatar(image: String!): Boolean
    updateUserProfile(userInfo: UpdateUserInput!): Boolean
    updateUserPassword(oldPassword: String!, newPassword: String!): Boolean
    forgetPassword(email: String!): Boolean
    resetPassword(
      token: String!
      newPassword: String!
      confirmNewPassword: String!
    ): Boolean
    updateUser(
      userId: ID!
      roles: [String!]
      isActive: Boolean
      membershipTier: String
      referralPointsAdjustment: Int
    ): Boolean
    deleteUser(userId: ID!): Boolean
  }
`;
