@startuml
!theme plain
skinparam backgroundColor #FAFAFA
skinparam defaultFontName Arial
skinparam defaultFontSize 13

title Hotel Booking Management System — Class Diagram (Domain Model)

hide methods
skinparam classAttributeIconSize 0

enum Role {
  user
  admin
}

enum PaymentMethod {
  cash
  card
}

enum PaymentStatus {
  pending
  paid
  refunded
}

enum BookingStatus {
  pending
  confirmed
  cancelled
}

enum BuffetBookingStatus {
  pending
  confirmed
  cancelled
}

enum MembershipTierName {
  silver
  gold
  diamond
}

class Avatar {
  +url: string
  +public_id: string
}

class User {
  +id: ObjectId
  +name: string
  +email: string
  +password: string
  +role: Role[*]
  +isActive: boolean
  +membershipTier: MembershipTierName
  +referralCode: string
  +referralPoints: number
  +avatar: Avatar
  +createdAt: Date
  +updatedAt: Date
}

class RoomImage {
  +url: string
  +public_id: string
}

class Room {
  +id: ObjectId
  +title: string
  +description: string
  +roomNumber: string
  +type: string
  +pricePerNight: number
  +capacity: number
  +location: string
  +isAvailable: boolean
  +images: RoomImage[*]
  +createdAt: Date
  +updatedAt: Date
  +ratings: Rating
}

class Rating {
  +value: number
  +count: number
}

class CustomerInfo {
  +name: string
  +email: string
}

class Amount {
  +rent: number
  +discount: number
  +tax: number
  +total: number
}

class BuffetAmount {
  +subtotal: number
  +tax: number
  +total: number
}

class PaymentInfo {
  +id: string
  +status: PaymentStatus
  +method: PaymentMethod
}

class RefundInfo {
  +id: string
  +amount: number
  +status: string
  +refundedAt: Date
}

class Booking {
  +id: ObjectId
  +startDate: Date
  +endDate: Date
  +daysOfRent: number
  +rentPerDay: number
  +status: BookingStatus
  +membershipTier: MembershipTierName
  +referralCode: string
  +additionalNote: string
  +cancelledAt: Date
  +cancelReason: string
  +createdAt: Date
  +updatedAt: Date
}

class Review {
  +id: ObjectId
  +rating: number
  +comment: string
  +createdAt: Date
  +updatedAt: Date
}

class Promotion {
  +id: ObjectId
  +code: string
  +description: string
  +discountType: string
  +discountValue: number
  +validFrom: Date
  +validTo: Date
  +active: boolean
  +maxUses: number
  +usedCount: number
  +createdAt: Date
  +updatedAt: Date
}

class MembershipTier {
  +id: ObjectId
  +name: MembershipTierName
  +discountPercentage: number
  +active: boolean
  +createdAt: Date
  +updatedAt: Date
}

class BuffetDinner {
  +id: ObjectId
  +title: string
  +cuisineCategory: string
  +description: string
  +imageUrl: string
  +startsAt: Date
  +endsAt: Date
  +includedDishes: string[*]
  +maxCapacity: number
  +pricePerGuest: number
  +facilities: string[*]
  +active: boolean
  +createdAt: Date
  +updatedAt: Date
  +remainingCapacity: number
}

class BuffetBooking {
  +id: ObjectId
  +guestCount: number
  +pricePerGuest: number
  +status: BuffetBookingStatus
  +additionalNote: string
  +cancelledAt: Date
  +cancelReason: string
  +createdAt: Date
  +updatedAt: Date
}

User "1" o-- "0..1" Avatar
Room "1" o-- "*" RoomImage

User "1" --> "*" Booking : user
Room "1" --> "*" Booking : room
Booking "1" o-- "1" CustomerInfo
Booking "1" o-- "1" Amount
Booking "1" o-- "0..1" PaymentInfo
Booking "1" o-- "0..1" RefundInfo
Booking "0..1" --> "1" User : referralOwner

User "1" --> "*" Review : writes
Room "1" --> "*" Review : has

Promotion "*" --> "*" Room : applicableRooms
MembershipTier "1" <-- "0..*" User : membershipTier
MembershipTier "1" <-- "0..*" Booking : membershipTier

User "1" --> "*" BuffetBooking : user
BuffetDinner "1" --> "*" BuffetBooking : buffetDinner
BuffetBooking "1" o-- "1" CustomerInfo
BuffetBooking "1" o-- "1" BuffetAmount
BuffetBooking "1" o-- "0..1" PaymentInfo

@enduml

